--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,205 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+}
+#root {
+	height: 100vh;
+}
+.outer {
+	display: flex;
+	height: 100vh;
+	align-items: center;
+	justify-content: center;
+	background: #2571;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login-box {
+	padding: 2em;
+	border: solid 1px #0002;
+	background: #fff;
+	display: flex;
+	flex-direction: column;
+}
+.label {
+	text-align: center;
+}
+
+input {
+	font-size: 1em;
+	height: 2.5em;
+	width: 15em;
+	padding: 0 1em;
+}
+button {
+	font-size: 1em;
+	height: 3em;
+	padding: 0 1em;
+	margin: 0.6em 0 0 0;
+	font-weight: bold;
+	border: none;
+	border-radius: 0.2em;
+}
+
+.success-box {
+	background: #3a7;
+	color: #fff;
+}
+.danger-box {
+	border: solid 2px #f00;
+	color: #f00;
+	background: #fff;
+}
+
+.label {
+	font-size: 1em;
+	margin: 0 0 1.5em 0;
+	color: #294
+}
+.home-box {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 1em;
+}
+.home-box .meet-box {
+	display: flex;
+	flex: 3;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.home-box .profile-box {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0 2em;
+}
+.profile-dp img {
+	width: 14em;
+}
+.profile-box .profile-dp {
+	height: 14em;
+	width: 14em;
+	border-radius: 8em;
+	overflow: hidden;
+}
+.profile-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.profile-name {
+	margin-top: 0.5em;
+	font-size: 1.4em;
+	font-weight: bold;
+}
+.profile-designation {
+	font-size: 0.8em;
+}
+.home-box button {
+	font-size: 0.9em;
+	margin-top: 1.5em;
+}
+.profile-main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+input {
+	font-size: 1.5em;
+	margin-bottom: 0.1em;
+}
+button {
+	font-size: 1.5em;
+	width: 100%;
+}
+
+
+.row {
+	flex-direction: row;
+}
+
+.patient-documents {
+	height: 100%;
+	overflow-y: scroll;
+	background-color: #000;
+	flex: 1;
+}
+.doc-outer {
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2em;
+	width: 6em;
+}
+.doc-image {
+	height: 5em;
+	width: 5em;
+	align-self: center;
+	filter: invert(1);
+}
+.doc-content {
+	width: 6em;
+}
+.doc-name {
+	font-size: 1em;
+	color: #fff;
+	margin-top: 0.5em;
+}
+.patient-profile-outer {
+	height: 100%;
+	width: 22em;
+}
+.patient-profile {
+	padding: 2em;
+	display: flex;
+	flex-direction: column;
+	font-size: 1.5em;
+}
+.patient-title {
+	font-weight: bold;
+	text-align: center;
+	font-size: 1.2em;
+}
+.patient-field {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 0.3em;
+}
+.patient-field-name {
+	margin-right: 0.3em;
+	color: #0007
+}
+.patient-field-name::after {
+	content: ':'
+}
+.patient-field-value {
+	flex: 1;
+	text-align: right;
+}
+.patient-profile button {
+	font-size: 0.9em;
+	margin-top: 1em;
+	padding: 0.3em;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+hr {
+	width: 100%;
 }
